--- a/.gitignore
+++ b/.gitignore
@@ -2,21 +2,34 @@
 
 # dependencies
 /node_modules
+/client/node_modules
+/client/.pnp
+/clinet/.pnp.js
 /.pnp
 .pnp.js
+/client/.eslintcache
+/client/package-lock.json
+/package-lock.json
 
 # testing
 /coverage
 
 # production
 /build
+/client/build
 
 # misc
 .DS_Store
+/client/.DS_Store
 .env.local
+/client/.env.local
 .env.development.local
+/client/.env.development.local
 .env.test.local
+/client/.env.test.local
 .env.production.local
+/client/.env.production.local
+
 
 npm-debug.log*
 yarn-debug.log*
