--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-basic-auth": "^1.2.0"
   },
   "devDependencies": {
-    "concurrently": "^4.0.1"
+    "concurrently": "^4.0.1",
+    "nodemon": "^2.0.7"
   }
 }
